initilaize database connection and add transaction helpers

--- a/customer/configs/config.yaml
+++ b/customer/configs/config.yaml
@@ -1,15 +1,16 @@
 server:
-  http:
-    addr: 0.0.0.0:8000
-    timeout: 1s
   grpc:
+    network: tcp
     addr: 0.0.0.0:9000
     timeout: 1s
+
 data:
   database:
-    driver: mysql
-    source: root:root@tcp(127.0.0.1:3306)/test?parseTime=True&loc=Local
+    driver: postgres
+    source: "postgres://postgres:ghq92DAU712.9dn@localhost:5432/customerdb?sslmode=disable"
+
   redis:
+    network: tcp
     addr: 127.0.0.1:6379
     read_timeout: 0.2s
     write_timeout: 0.2s
